// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should click on min button 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3>svg {
  fill: #4f0599;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 25px;"
        value="8"
      />
      <span
        class="emotion-8 emotion-9"
      />
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should click on plus button with a step value 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3>svg {
  fill: #4f0599;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 35px;"
        value="30"
      />
      <span
        class="emotion-8 emotion-9"
      />
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3>svg {
  fill: #4f0599;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="20"
      />
      <span
        class="emotion-8 emotion-9"
      />
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMaxCrossed 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3>svg {
  fill: #4f0599;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-13 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-13:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 45px;"
        type="text"
        value="100"
      />
      <span
        class="emotion-8 emotion-9"
      />
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-13"
      disabled=""
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMinCrossed 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-13 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-13>svg {
  fill: #4f0599;
}

.emotion-13:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      disabled=""
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="10"
      />
      <span
        class="emotion-8 emotion-9"
      />
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-13"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3>svg {
  fill: #4f0599;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-8 emotion-9"
      >
        unit
      </span>
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #f6f5f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-1>.emotion-2,
.emotion-1 .emotion-9,
.emotion-1 .emotion-6 {
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
    disabled=""
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      disabled=""
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      disabled=""
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        disabled=""
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-8 emotion-9"
        disabled=""
      >
        unit
      </span>
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-3"
      disabled=""
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders large size 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.emotion-3>svg {
  fill: #4f0599;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-15 {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-8 emotion-9"
      />
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders small size 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 32px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 22px;
  margin: 0 4px;
}

.emotion-3>svg {
  fill: #4f0599;
}

.emotion-3:hover:not([disabled]) {
  background: #eeeeff;
}

.emotion-5 {
  fill: #dce1eb;
  height: 18px;
  width: 18px;
  min-width: 18px;
  min-height: 18px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
}

.emotion-7.emotion-7 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-7:active {
  opacity: 0.5;
}

.emotion-7:hover:not([disabled]):not(:focus) {
  border: 1px solid #4f0599;
}

.emotion-7:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.emotion-8 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-15 {
  fill: currentColor;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.emotion-15.emotion-15 {
  vertical-align: middle;
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      aria-label="Minus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-5"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-label="Input"
      class="emotion-6 emotion-7"
      type="button"
    >
      <input
        class="emotion-8 emotion-9"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-8 emotion-9"
      />
    </button>
    <button
      aria-label="Plus"
      class="emotion-2 emotion-3"
      type="button"
    >
      <svg
        class="sc-ui-icon emotion-4 emotion-15"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
